--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-icons": "^4.3.1",
     "styled-components": "^5.3.3",
     "tailwind-styled-components": "^2.0.3"
   },
   "devDependencies": {
     "@types/node": "16.11.12",
     "@types/react": "17.0.37",
+    "@types/react-icons": "^3.0.0",
+    "@types/styled-components": "^5.1.17",
     "autoprefixer": "^10.4.0",
     "babel-plugin-styled-components": "^2.0.2",
     "eslint": "8.4.1",
